fix transform graphic and satisfaction page

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <section id="healthy">
     <div class="mainitems">
       <h1>Is <strong>Potato&trade;</strong> healthy? Yes it is!</h1>
-      <h2>The majority of carbodydrates in potatoes<br> are complex carbohydrates, your body's main energy source.</h2>
+      <h2>The majority of carbodydrates in potatoes are complex carbohydrates,<br>
+        your body's main energy source.</h2>
     <img src="assets/potatoassets-2/potato-3.png">
-    <img scr="assets/potatoassets-2/blur2.png">
 <ul id="stats">
   <li><h2>110</h2> calories</li>
   <li><h2>26g</h2> carbohydrates</li>
@@ -62,41 +62,53 @@
 <section id="transform">
     <div class="mainitems">
     <h1>Easily Transformable</h1>
-    <h2>Because of its unique structure, <strong>Potato&trade;</strong>is <br>easily usable
+    <h2>Because of its unique structure, <strong>Potato&trade;</strong> is easily usable<br>
       and transformable in any form you can think of.</h2>
-    </div>
   <section id="transwrapper">
-    <div id="halftater">
-    <img src="/assets/potatoassets-2/potato-3.png"
-  </div>
-  <div id="slider">
-    <img src="/assets/potatoassets-2/devider.png">
-  </div>
-  <div id="chips">
-    <img src="/assets/potatoassets-2/chips.png">
-  </div>
+    <figure id="transtater">
+      <img src="assets/potatoassets-2/transformtater">
+    </figure>
+    <figure id="divider">
+      <img src="assets/potatoassets-2/devider.png">
+    </figure>
+    <figure id="halfchip">
+      <img src="assets/potatoassets-2/halfchip.png">
+    </figure>
 </section>
+</div>
 </section>
 <!-- PAGE FIVE SATISFACTION START-->
 <section id="satisfaction">
     <div class="mainitems">
       <h1>100% Customer satisfaction!</h1>
-    <div id="wrapper">
-      <blockquote>
-      </p>"A thing that comes out of the ground that solves all my carbohydrate needs and also my love of fried foods? Holy cow, sign me up immediately!"</p>
+    <div class="flexslider">
+      <blockquote class="slides">
+        <blockquote id="block1">
+        </p>"A thing that comes out of the ground that solves all my carbohydrate needs
+         and also my love of fried foods? Holy cow, sign me up immediately!"</p>
+       </blockquote>
+       <blockquote id="block2">
         </p>"I was a skeptic at first, but when I tried the Potato for the first time,
         my life has completely changed! I'm a better person now. Everything is better with
         the Potato."</p>
-      <footer><strong>Jane Doe</strong>, single mom</footer>
-      </p>"The first time I had Potato at the beach, all fried up and sprinkled with vinegar, I knew my life was complete. I can die now."</p>
-    </blockquote>
-  </div>
+        <footer>
+          <strong>--Jane Doe</strong>, single mom
+        </footer>
+        </blockquote>
+        <blockquote id="block3">
+          </p>"The first time I had Potato at the beach, all fried up and sprinkled with
+           vinegar, I knew my life was complete. I can die now."</p>
+         </blockquote>
+      </blockquote> 
+    </div>
 </section>
 
   <!--PAGE SIX ORDER PAGE-->
   <section id="order">
-      <h1>Order one (or more) today!</h1>
-      <div class="container"
+      <div class="mainitems">
+        <h1>Order one (or more) today!</h1>
+      </div>
+      <div class="container">
         <ul id="lite">
         <h3><strong>Potato&trade;</strong> Lite</h3>
           <li>Small and compact</li>
