add images to order page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1>Different shapes and sizes</h1>
         <h2><strong>Potato&trade;</strong> comes in many different unique shapes and sizes.<br>
           Find the one that fits your personal preferences.</h2>
-      <img scr="assets/potatoassets-2/potatoline.png"
       <img src="assets/potatoassets-2/potato2.png">
+      <img scr="assets/potatoassets-2/potatoline.png"
     </div>
 </section>
 <!--PAGE THREE HEALTHY STARTS -->
@@ -114,30 +114,35 @@
           <li>Small and compact</li>
           <li>Highly portable</li>
           <li>Unapologetically delicious</li>
-        </ul>
-            <div class="button" href="#Order">
+            <div class="button"><a href="#Order">Order</a>
+            </div>
             <small>starting at $9.99</small>
           </div>
+          <img src="assets/potatoassets-2/potatosmall.png">
+          </ul>
       <ul id="pro">
             <h3>Potato&trade; Pro</h3>
               <li>Highly portable</li>
               <li>Easily sliceable</li>
               <li>Unapologetically delicious</li>
               <li>Highly nutritious</li>
-            </ul>
-            <div class="button" href="#Order">
-            <small>starting at $19.99</small></div>
+            <div class="button"><a href="#Order">Order</a>
+            </div>
+            <small>starting at $19.99</small>
           </div>
+          <img src="assets/potatoassets-2/potato-3.png">
+          </ul>
       <ul id="team">
           <h3>Potato&trade; Team</h3>
           <li>Ideal for bigger groups</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
           <li>Very nutritious</li>
-        </ul>
-            <div class="button" href="#Order">
-              <small>starting at $39.99</small>
+            <div class="button"><a href="#Order">Order</a>
             </div>
+            <small>starting at $39.99</small>
+            <img src="assets/potatoassets-2/potato1.png">
+            </ul>
       </div>
 </section>
 <!--FOOTER STARTS-->
