take images out of order page

--- a/index.html
+++ b/index.html
@@ -86,18 +86,24 @@
         <blockquote id="block1">
         </p>"A thing that comes out of the ground that solves all my carbohydrate needs
          and also my love of fried foods? Holy cow, sign me up immediately!"</p>
+         <footer>
+           <strong>&mdash;Jane Doe</strong>, single mom
+         </footer>
        </blockquote>
        <blockquote id="block2">
         </p>"I was a skeptic at first, but when I tried the Potato for the first time,
         my life has completely changed! I'm a better person now. Everything is better with
         the Potato."</p>
         <footer>
-          <strong>--Jane Doe</strong>, single mom
+          <strong>&mdash;Jane Doe</strong>, single mom
         </footer>
         </blockquote>
         <blockquote id="block3">
           </p>"The first time I had Potato at the beach, all fried up and sprinkled with
            vinegar, I knew my life was complete. I can die now."</p>
+           <footer>
+             <strong>&mdash;Jane Doe</strong>, single mom
+           </footer>
          </blockquote>
       </blockquote> 
     </div>
@@ -118,10 +124,9 @@
             </div>
             <small>starting at $9.99</small>
           </div>
-          <img src="assets/potatoassets-2/potatosmall.png">
           </ul>
       <ul id="pro">
-            <h3>Potato&trade; Pro</h3>
+            <h3><strong>Potato&trade;</strong> Pro</h3>
               <li>Highly portable</li>
               <li>Easily sliceable</li>
               <li>Unapologetically delicious</li>
@@ -130,10 +135,9 @@
             </div>
             <small>starting at $19.99</small>
           </div>
-          <img src="assets/potatoassets-2/potato-3.png">
           </ul>
       <ul id="team">
-          <h3>Potato&trade; Team</h3>
+          <h3><strong>Potato&trade;</strong> Team</h3>
           <li>Ideal for bigger groups</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
@@ -141,7 +145,6 @@
             <div class="button"><a href="#Order">Order</a>
             </div>
             <small>starting at $39.99</small>
-            <img src="assets/potatoassets-2/potato1.png">
             </ul>
       </div>
 </section>
